--- a/src/app/DemoPages/UserPages/forgot-password/forgot-password.component.html
+++ b/src/app/DemoPages/UserPages/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
   <div class="row h-100 no-gutters">
     <div class="d-none d-lg-block col-lg-4">
       <div class="slider-light">
-      
+
           <ngx-slick-carousel class="slick-slider slick-dotted" #slickModal="slick-carousel" [config]="slideConfig2">
           <div ngxSlickItem>
             <div class="position-relative h-100 d-flex justify-content-center align-items-center bg-plum-plate">
@@ -48,25 +48,26 @@
       <div class="mx-auto app-login-box col-sm-12 col-md-8 col-lg-6">
         <div class="app-logo"></div>
         <h4>
-          <div>Forgot your Password?</div>
-          <span>Use the form below to recover it.</span>
+          <div>Mot de passe oublié ?</div>
+          <span>Utilisez le formulaire ci-dessous pour le récupérer..</span>
         </h4>
         <div>
-          <form>
+          <form [formGroup]="resetform" (submit)="submit()">
             <div class="row">
               <div class="col-md-12">
                 <fieldset class="form-group" id="__BVID__133">
-                  <div tabindex="-1" role="group"><label for="exampleEmail">Email</label><input id="exampleEmail"
-                      name="email" type="email" placeholder="Email here..." class="form-control">
+                  <div tabindex="-1" role="group">
+                    <label for="exampleEmail">Email</label>
+                    <input formControlName="email" id="exampleEmail" name="email" type="email" placeholder="Email ici..." class="form-control">
                   </div>
                 </fieldset>
               </div>
             </div>
             <div class="mt-4 d-flex align-items-center">
-              <h6 class="mb-0"><a routerLink="/userpages/login" class="text-primary">Sign in existing
-                  account</a></h6>
+              <h6 class="mb-0"><a routerLink="/userpages/login" class="text-primary">
+                Se connecter un compte existant</a></h6>
               <div class="ml-auto">
-                <button type="button" [routerLink]="" class="btn btn-primary btn-lg" >Recover Password</button>
+                <button  [routerLink]="" class="btn btn-primary btn-lg" >Récupérer le mot de passe</button>
               </div>
             </div>
           </form>
