--- a/src/app/Layout/Components/sidebar/sidebar.component.html
+++ b/src/app/Layout/Components/sidebar/sidebar.component.html
@@ -41,10 +41,10 @@
                           <span class="vsm-title">Gestion terminaux</span>
                         </a>
                       </div>
-                     
+
                       <div class="vsm-item">
                         <a routerLink="/dashboards/gerer-terminal" routerLinkActive="active-item" class="vsm-link">
-                          <span class="vsm-title">Gérer Terminal</span>
+                          <span class="vsm-title">Consulter les états</span>
                         </a>
                       </div>
                       <div class="vsm-item">
