--- a/src/app/DemoPages/Dashboards/administrateur/administrateur.component.html
+++ b/src/app/DemoPages/Dashboards/administrateur/administrateur.component.html
@@ -12,7 +12,8 @@
             
         </div>
         <div class="page-title-actions">
-            <button type="button" class="btn-shadow d-inline-flex align-items-center btn btn-success">
+            <button type="button" class="btn-shadow d-inline-flex align-items-center btn btn-success"
+            (click)="triggerModal(modaladdadmin)">
               <br>
               <div><i class="material-icons">&#xE147;</i>
               </div>
@@ -77,3 +78,55 @@
     <br>
 
 </div>
+<ng-template #modaladdadmin let-modal >
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Ajout d'un administrateur</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="this.form">
+        <div class="position-relative form-group">
+          <label for="examplegroupe">Nom : </label>
+          <input formControlName="nom" name="nom" type="text" placeholder="votre nom" class="form-control" >
+        </div>   
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Prénom : </label>
+            <input formControlName="prenom" name="prenom" type="text" placeholder="Votre prénom" class="form-control" >
+        </div>   
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Adresse : </label>
+            <input formControlName="adresse" name="adresse" type="text" placeholder="Votre adresse" class="form-control" >
+        </div> 
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Email : </label>
+            <input formControlName="email" name="email" type="text" placeholder="Votre email." class="form-control" >
+        </div> 
+        <div class="col-md-6">
+            <fieldset class="form-group" id="__BVID__136">
+              <div tabindex="-1" role="group">
+                <label for="examplePassword"><span class="text-danger">*</span>
+                  Password : 
+                </label>
+                <input name="password" formControlName="password" type="password" placeholder="Password..." class="form-control"></div>
+            </fieldset>
+          </div>
+          <div class="col-md-6">
+            <fieldset class="form-group" id="__BVID__138">
+              <div tabindex="-1" role="group">
+                <label for="examplePasswordRep">
+                  <span class="text-danger">*</span>
+                  Confirmation Password : 
+                </label>
+                <input name="password_confirmation" formControlName="password_confirmation" type="password" placeholder="Confirmer mot de passe..." class="form-control"></div>
+            </fieldset>
+          </div>
+
+    <div class="modal-footer">
+      <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">Close</button>
+      <button type="button" (click)="onSubmit()" (click)="modal.close('Save click')" class="btn btn-success" [disabled]="!form.valid">Ajouter</button>
+    </div>
+  </form> 
+  </div>
+  </ng-template>
